add url_parameter to dqlang